syntax = "proto3";
option go_package = ".;pm";

service ManagerForClient {
  rpc Write(WriteRequest) returns (WriteResponse) {}
  rpc Read(ReadRequest) returns (ReadResponse) {}
}

message WriteRequest {
  string key = 1;
  bytes value = 2;
}

message WriteResponse {}

message ReadRequest {
  string key = 1;
}

message ReadResponse {
  bytes value = 1;
}

service ManagerForWorker {
  rpc Heartbeat(HeartbeatRequest) returns (HeartbeatResponse) {}
}

message HeartbeatRequest {
  string address = 1;
  int64 id = 2;
}

message HeartbeatResponse {
  int64 id = 1;
}